# sequential

./: Cargo.toml  README.md
seqgen/: Cargo.toml
seqgen/src/: intosg.rs  lib.rs  seqgen.rs
sequential/: Cargo.toml
sequential-async/: Cargo.toml
sequential-async/src/: lib.rs
sequential/src/: gen.rs  intoseq.rs  lib.rs  seq.rs  sequential.rs
sequential/src/seq/: into.rs
src/: .gen.rs.swp  .seq.rs.swp  andthen.rs  combinators.rs  emitter.rs  fnmut.rs  gen.rs  intoseq.rs  intosequential.rs  lib.rs  mapitem.rs  mapitems.rs  mapoutput.rs  mapterminal.rs  seq.rs  sequential.rs  termonerr.rs  termonerror.rs  termonresi.rs  tests.rs  transformnext.rs  update.rs
src/combinators/: andthen.rs  mapitems.rs  mapterminal.rs  termonerr.rs
src/emitter/: andthen.rs  intoemitter.rs
src/sequential/: andthen.rs  fnmut.rs  pipe.rs  tests.rs
