[package]
name = "seqgen"
description = "A trait for sequential generation of outputs and explicit termination."
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
