[package]
name = "sequential"
description = "A trait for sequential processes over inputs, outputs, and explicit termination."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
either.workspace = true

[dev-dependencies]
test-case.workspace = true
